Bonus Brigade Crisis Mechanic

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -105,6 +105,7 @@ PB_Second_Times_the_Charm:0 "Second Time's the Charm!"
 PB_AME_A_Very_American_Kind_of_Crisis:0 "A Very American Kind of Crisis"
 PB_AME_The_Shelling_Solution:0 "Rush and Crush Solution"
 PB_AME_Stall_for_Time:0 "Stalling for Time"
+PB_Kick_Down_The_Gates:0 "Kick Down The Gates"
 PB_AME_Mobilize_Rampies_and_Home_Guard:0 "Mobilize Rampies & HG"
 PB_AME_Escalation_Dominance:0 "Escalation Dominance"
 PB_AME_Accept_the_Bloody_Bonus:0 "Accept the Bloody Bonus"
@@ -294,68 +295,6 @@ PB_AME_America_as_Christian_Nation:0 "Christian Soul to Nationhood"
 PB_AME_Social_Affairs_Directorate:0 "The Social Affairs Directorate"
 PB_AME_An_American_IBS_Alternative:0 "Homegrown Alternative to IBS"
 
-##########################
-# PARLIAMENT MECHANICS
-##########################
-
-# Tooltips
-AME_PAR2tooltip:0 "§RPartisan Gridlock preventing said motion passing§!"
-AME_PAR3tooltip:0 "§GSaid motion succeeding in Parliament§!"
-AME_PAR4tooltip:0 "Parliament will be unable to review any further acts until they are done with their current examination process\n"
-AME_PAR5tooltip:0 "Parliament will once again be able to review any future acts"
-
-# Flags
-AME_ACT_IN_MOTION:0 "An Act Is Currently In Motion Or Parliament Is In Recess"
-AME_Congress_Is_In_Recess:0 "Parliament Is In Recess"
-
-# Decisions
-AME_Congress_Recess:0 "Parliament Is In Recess"
-AME_Congress_Recess_desc:0 "\nDue to the administrative strain of change and reform, Parliament must be given some time to focus on smaller, and rather more petty matters before once again reviewing any major acts. Though this period is relatively short so progress will arrive quickly in time."
-AME_Veterans_Act:0 "Veterans Protection Act (VPA)"
-AME_Veterans_Act_desc:0 "\nVeterans Protection Act (§YVPA§!): This act will safeguard those that sacrificed so much for this country. They, afterall, are the spartans of 'American Idealism'. The vanguards of peace and prosperity. And most importantly, our sons, brothers, and fathers. Through ration handouts and economic aid will we be able to get these men back up onto their feet. So they can once again provide for this great nation."
-AME_Farmer_Relief_Package:0 "Farmer Relief Package (FRP)"
-AME_Farmer_Relief_Package_desc:0 "\nFarmer Relief Package (§YFRP§!): With the "Great Western Dustbowl" damaging much of our crop monopolies the need to assist our farmers is of the utmost importance. Lest me all starve to death. Britian has offered economic aid to help with the situation so its only a matter of dedicating the funds to the right people. Of course there are those who'd rather see their competition sink into the ground and rot."
-AME_Native_Reconigition_Decree:0 "Native Reconigition Decree (NRD)"
-AME_Native_Reconigition_Decree_desc:0 "\nNative Reconigition Decree (§YNRD§!): An official reconigition of the Native American people's will go a long way in preserving future stability, and hopefully, address the damaging border raids we currently experience by minor tribes out west. Of course this won't end racism but it will be a small step in the right direction."
-AME_American_Fishing_Zone:0 "American Fishing Zone (AFZ)"
-AME_American_Fishing_Zone_desc:0 "\nAmerican Fishing Zone (§YAFZ§!): Extending our already established fishing zones from 2 nautical miles to 4 will greatly assist in the growing fishing industry, especially around the maratime areas situated near Nova Scotia. This will also better allow us to police our Oceanic borders."
-AME_Transportation_Act:0 "Transportation Act (TA)"
-AME_Transportation_Act_desc:0 "\nTransportation Act (§YTA§!): With railroads and public trams playing a large role in the movement of modern society in would be foolish of us to not evolve our laws. Benefits and encouragements for the usage of such things should be a large prioty for state governments to focus on."
-AME_Cites_Development_Plan:0 "Cites Development Plan (CDP)"
-AME_Cites_Development_Plan_desc:0 "\nCites Development Plan (§YCDP§!): If we are to produce a society that works and provides then the sure fire way to achieve such a thing is by building, buidling roads, homes, and pits. Wherever needs digging we shall provide the shovel. All we ask for in return is a steady supply of ready and eager hands to do so."
-
-# Events
-AME_Parliament1title:0 "Motion Fails"
-AME_Parliament1desc:0 "" 
-AME_Parliament1opta:0 "Really!"
-
-AME_Parliament2title:0 "Veterans Protection Act"
-AME_Parliament2desc:0 "" 
-AME_Parliament2opta:0 "Fantastic"
-
-AME_Parliament3title:0 "Farmer Relief Package"
-AME_Parliament3desc:0 "" 
-AME_Parliament3opta:0 "Fantastic"
-
-AME_Parliament4title:0 "Native Reconigition Decree"
-AME_Parliament4desc:0 "" 
-AME_Parliament4opta:0 "Fantastic"
-
-AME_Parliament5title:0 "American Fishing Zone"
-AME_Parliament5desc:0 "" 
-AME_Parliament5opta:0 "Fantastic"
-
-AME_Parliament6title:0 "Transportation Act"
-AME_Parliament6desc:0 "" 
-AME_Parliament6opta:0 "Fantastic"
-
-AME_Parliament7title:0 "Cites Development Plan"
-AME_Parliament7desc:0 "" 
-AME_Parliament7opta:0 "Fantastic"
-
-##########################
-# EVENTS
-##########################
 
 ##########################
 # MINISTERS
@@ -572,12 +511,63 @@ PB_AME_START_TT_3:0 "§YThe Crittenden compromise has brought severe injustice t
 tooltip_AME_No_Butler_Support:0 "§YWithout Butler's support, we may have greater difficulty negotiating terms with the Legion.§!"
 tooltip_AME_Bonus_Brigade_Choice_Available_tt:0 "§YWe can now decide how we wish to tackle the Bonus Brigade Crisis§!"
 
+AME_Spacing_tt:0 "  \n"
+
+
 ##########################
 # PUPPET AUTONOMY
 ##########################
 
+
 ##########################
-# BLEEDING SOUTH - Made In China ( Jk Made By G_O_D )
+# BONUS BRIGADE CRISIS - Made In China ( Jk Made By BERNIE )
+##########################
+
+PB_AME_Bonus_Brigade_Crisis:0 "Bonus Brigade Crisis"
+PB_AME_Bonus_Brigade_Crisis_desc:0 "\n\n\n\n\n\nOver 2 million men unemployed with mouths to feed, what is one to do? The previous administration under Arthur Meighen thought ingnoring the issue wholesale would be a good idea, oh what fools they were. The Coolidge ministry now has the ardious task of responding to disgruntled Great War veterans who have had enough of the states complete financial abandonment. Unless some major steps are taken to support these desperate men we may face our worst disaster yet since the American Revolution, and the clock has already begun ticking."
+
+PB_UC_Bonus_Brigade_Crisis_Active:0 "The Bonus Brigade Crisis is Active"
+
+AME_BBC_Stab_VH:0 "§WRegional Stability:§! §GVery High§!"
+AME_BBC_Stab_H:0 "§WRegional Stability:§! §GHigh§!"
+AME_BBC_Stab_L:0 "§WRegional Stability:§! §RLow§!"
+AME_BBC_Stab_VL:0 "§WRegional Stability:§! §RVery Low§!"
+
+AME_New_England_Stab_Very_High_tt:0 "£GFX_territory_icon  New England Regional Stability: \n§GVery Stable§!"
+AME_New_England_Stab_High_tt:0 "£GFX_territory_icon  New England Regional Stability: \n§GStable§!"
+AME_New_England_Stab_Low_tt:0 "£GFX_territory_icon  New England Regional Stability: \n§RUnstable§!"
+AME_New_England_Stab_Very_Low_tt:0 "£GFX_territory_icon  New England Regional Stability: \n§RVery Unstable§!"
+AME_South_Stab_Very_High_tt:0 "£GFX_territory_icon  South Regional Stability: \n§GVery Stable§!"
+AME_South_Stab_High_tt:0 "£GFX_territory_icon  South Regional Stability: \n§GStable§!"
+AME_South_Stab_Low_tt:0 "£GFX_territory_icon  South Regional Stability: \n§RUnstable§!"
+AME_South_Stab_Very_Low_tt:0 "£GFX_territory_icon  South Regional Stability: \n§RVery Unstable§!"
+AME_Appalachian_Stab_Very_High_tt:0 "£GFX_territory_icon  Appalachia Regional Stability: \n§GVery Stable§!"
+AME_Appalachian_Stab_High_tt:0 "£GFX_territory_icon  Appalachia Regional Stability: \n§GStable§!"
+AME_Appalachian_Stab_Low_tt:0 "£GFX_territory_icon  Appalachia Regional Stability: \n§RUnstable§!"
+AME_Appalachian_Stab_Very_Low_tt:0 "£GFX_territory_icon  Appalachia Regional Stability: \n§RVery Unstable§!"
+AME_Mid_West_Stab_Very_High_tt:0 "£GFX_territory_icon  Mid-West Regional Stability: \n§GVery Stable§!"
+AME_Mid_West_Stab_High_tt:0 "£GFX_territory_icon  Mid-West Regional Stability: \n§GStable§!"
+AME_Mid_West_Stab_Low_tt:0 "£GFX_territory_icon  Mid-West Regional Stability: \n§RUnstable§!"
+AME_Mid_West_Stab_Very_Low_tt:0 "£GFX_territory_icon  Mid-West Regional Stability: \n§RVery Unstable§!"
+
+AME_Mid_West_Control:0 "Suppress Mid-Western Militias"
+AME_South_Control:0 "Suppress Southern Militias"
+AME_Appalachia_Control:0 "Suppress Appalachian Militias"
+AME_New_England_Control:0 "Suppress New Englander Militias"
+AME_Enforce_A_Crackdown:0 "Crackdown On Dissidents"
+AME_Mid_West_Stab_Timer:0 "Unrest In The Mid-West"
+AME_South_Stab_Timer:0 "Unrest In The South"
+AME_New_England_Stab_Timer:0 "Unrest In New England"
+AME_Appalachian_Stab_Timer:0 "Unrest In Appalachia"
+AME_Mid_West_Stab_Timer_tt:0 "£GFX_territory_icon  Mid-West Regional Stability will §RDecrease§!"
+AME_South_Stab_Timer_tt:0 "£GFX_territory_icon  South Regional Stability will §RDecrease§!"
+AME_New_England_Stab_Timer_tt:0 "£GFX_territory_icon  New England Regional Stability will §RDecrease§!"
+AME_Appalachian_Stab_Timer_tt:0 "£GFX_territory_icon  Appalachia Regional Stability will §RDecrease§!"
+
+PB_AME_A_Very_American_Kind_of_Crisis_tt:0 "\n£GFX_territory_icon  Regional Stability will need to be §HProlonged§! long enough that we can deal with the §RBonus Brigade Crisis§!, some regions will inevitably become unstable but fear not as long as we quickly resolve this crisis and ensure that a total regional collapse doesn't occur everything will go to plan, hopefully.\n\n"
+
+##########################
+# BLEEDING SOUTH - Made In China ( Jk Made By BERNIE )
 ##########################
 
 # Decisions
