Another SCA push

--- a/localisation/english/PB_Captured_Cities_Events_l_english.yml
+++ b/localisation/english/PB_Captured_Cities_Events_l_english.yml
@@ -42,3 +42,23 @@ PBCity.7.t:0 "The Fall of Tokyo"
 PBCity.7.d:0 "Reports indicate that Tokyo has fallen to assaulting [282.Controller.GetAdjective] forces. Once the shining capital of the Japanese Empire, the city had lived through the bloody days of the Japanese Civil War only to fall to outside invaders.\n\nIn spite of the withdrawal of Japanese forces, the city remains in a state of perpetual conflict as fanatical Japanese apparatchiks resist the [282.Controller.GetAdjective] occupation at all costs. The city remains consumed in a cycle of rabid, horrific violence by both sides."
 PBCity.7.a:0 "So much for the revolution"
 PBCity.7.b:0 "We will fight to the bloody end."
+
+PBCity.8.t:0 "The Fall of Melbourne"
+PBCity.8.d:0 "The major industrial Mid-western city of Melbourne fell to Continental forces today. Frantic reports indicate that despite the fact that many Commonwealth troops fought to the bitter end, the unrelenting waves of our superior armies were simply too much to allow for any centralized defense plan to be put into action. While there are still some Commonwealth soldiers fighting against Continental liberation any hopes of Commonwealth forces retaking the city seem unlikely."
+PBCity.8.a:0 "One city at a time boys."
+
+PBCity.9.t:0 "The Fall of Baltimore"
+PBCity.9.d:0 "After a long drawn out battle the city of Baltimore has finally fallen under our control. While some may reject Continental authority already efforts are well under way to find these state enemies and ensure that no further destabilizing actions take place whilst we continue our advance eastwards further into Commonwealth territory."
+PBCity.9.a:0 "Philly will soon be ours."
+
+PBCity.10.t:0 "The Fall of Philadelphia"
+PBCity.10.d:0 "Philadelphia, the capital of the United Commonwealth, has collapsed under its own weight to our armies. In a short ceremony Butler announced to a crowd within the now ruined Parliament building that the fall of the Commonwealth and its crumbling armies was soon to take place and that any who still supported such a regime would swiftly be dealt with. While some in the crowd remained silent or openly protested such a statement many cheered and praised Butler for his heroic accomplishment. Troops paraded around city blocks and just as the crowds grew larger and larger the need to quickly rotate troops back to the front lines would take place. Convoys as far as the eyes could see would be filled to the brim with joyous men who had only the shortest opportunity to engage with friends and family they hadn’t since in years, just to be thrown back into the trucks they happily ran out of in a moments notice."
+PBCity.10.a:0 "And they said it couldn't be done."
+
+PBCity.11.t:0 "The Fall of New York"
+PBCity.11.d:0 "The city of corruption has been overrun by our unstoppable armies. Few loyalist remain within the city, on a handfull of militia men have barricaded themselves within certain city blocks but efforts are already under way to root out the last of these soldiers. The time will soon come where all Americans will be free from Commonwealth oppression. "
+PBCity.11.a:0 "Our struggles are not yet over! Keep pushing and don't turn back."
+
+PBCity.12.t:0 "The Fall of Boston"
+PBCity.12.d:0 "The city of Boston has, after many days of ferocious close quarters combat, come under our complete and total control. What remains of the Commonwealth government is yet unknown, but many are confident that the Commonwealth threat has largely been pacified. While there are still some hostile units present within the countryside it is only a matter of days before these enemy divisions kneel to our demands. Vae Victis."
+PBCity.12.a:0 "Any day now they will be begging for mercy."
