--- a/localisation/english/PB_war_l_english.yml
+++ b/localisation/english/PB_war_l_english.yml
@@ -68,3 +68,8 @@ WAR_NAME_NRU_RRU:0 "The Russian Civil War"
 WAR_NAME_RRU_NRU:0 "The Russian Civil War"
 WAR_NAME_DRU_RRU:0 "The Russian Civil War"
 WAR_NAME_RRU_DRU:0 "The Russian Civil War"
+
+WAR_NAME_SCA_AME:0 "Second American Revolution"
+WAR_NAME_AME_SCA:0 "Second American Revolution"
+WAR_NAME_SCA_ENG:0 "Second American Revolution"
+WAR_NAME_ENG_SCA:0 "Second American Revolution"
