SCA post war stuff

--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -1023,6 +1023,9 @@
   SCA_Butler_Portrait_1:0 "Portrait Option A:\n--------------------------------\n\n\n\n\n\n\n£GFX_SCA_Butler_Portrait_1\n\n\n\n\n\n\n\n--------------------------------"
   SCA_Butler_Portrait_2:0 "Portrait Option B:\n--------------------------------\n\n\n\n\n\n\n£GFX_SCA_Butler_Portrait_2\n\n\n\n\n\n\n\n--------------------------------"
   SCA_Butler_Portrait_3:0 "Portrait Option C:\n--------------------------------\n\n\n\n\n\n\n£GFX_SCA_Butler_Portrait_3\n\n\n\n\n\n\n\n--------------------------------"
+  
+  SCA_Total_War_Lol_tt:0 "§RYou will need to defeat Quebec, the Hudson Bay, and the United Commonwealth to force a peace deal.§!"
+  SCA_Total_War_Lol_2_tt:0 "§HYou only need to defeat the United Commonwealth to force a peace deal.§!"
 
   ##########################
   # TECH
@@ -1142,6 +1145,36 @@
   SCA22title:0 "The Second Continetal Army"
   SCA22desc:0 "" 
   SCA22opta:0 "Butler was always a fool."
+
+  SCA23title:0 "War Plan: East"
+  SCA23desc:0 "" 
+  SCA23opta:0 "Our interests lay with the Commonwealth"
+  SCA23optb:0 "Total War!"
+
+  SCA24title:0 "The Future of the North?"
+  SCA24desc:0 "" 
+  SCA24opta:0 "Consolidate it under one puppet regime."
+  SCA24optb:0 "Keep the nations divided and under our supervision."
+  SCA24optc:0 "The North will remain under direct Continetal control."
+
+  ##########################
+  # PUPPETS/AUTONOMIES
+  ##########################
+
+  autonomy_PB_American_Sister_Republic:0 "American Sister Republic"
+
+  QUE_SCA_Puppet_United:0 "Borealian People's United Republic"
+  QUE_SCA_Puppet_United_DEF:0 "the Borealian People's United Republic"
+  QUE_SCA_Puppet_United_ADJ:0 "Borealian"
+
+  QUE_SCA_Puppet:0 "Quebec People's United Republic"
+  QUE_SCA_Puppet_DEF:0 "the Quebec People's United Republic"
+  QUE_SCA_Puppet_ADJ:0 "Quebecois"
+
+  BCL_SCA_Puppet:0 "Canadian People's United Republic"
+  BCL_SCA_Puppet_DEF:0 "the Canadian People's United Republic"
+  BCL_SCA_Puppet_ADJ:0 "Canadian"
+
 
 
 
