--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -647,7 +647,7 @@
   SCA_Migrate_The_Farmers_desc:0 ""
 
   SCA_Industrialize_The_Wastes:0 "Industrialize The Wastes"
-  SCA_Industrialize_The_Wastes_desc:0 ""
+  SCA_Industrialize_The_Wastes_desc:0 "As we expanded out lands Westward, it soon became clear that much of the land was little more than empty desert or wasteland. Sparsely populated with few major cities or big towns. At first it was feared that these lands would offer little to no economic value. But there is one benefit to the region. Plenty of empty space. With so much room and few local to complain, we can construct vast factories in the Mojave and other such areas. Allowing our industrial economy to grow unimpeded, there may be some damage to the land itself but deserts are rarely teeming with life anyway."
 
   SCA_Factories_Of_The_New_World:0 "Factories Of The New World"
   SCA_Factories_Of_The_New_World_desc:0 ""
@@ -710,19 +710,19 @@
   SCA_Revolution_No_Matter_The_Cost_desc:0 ""
 
   SCA_Honourable_Liberators:0 "Honourable Liberators"
-  SCA_Honourable_Liberators_desc:0 ""
+  SCA_Honourable_Liberators_desc:0 "It was once said that all is 'fair in love and war', but as the day of the Liberation of the East draws closer, we must prove this quote wrong. This conflict will be our largest military operation and will be the first impression we give to much of the world. While we must win, we will not resort to the kind of cruel and dishonourable tactics employed by much of the world. Though this, we will put our best foot forward. Proving that the Revolution is not a bloody purge but a noble crusade of liberation!"
 
   SCA_Late_Night_House_Calls:0 "Late Night House Calls"
-  SCA_Late_Night_House_Calls_desc:0 ""
+  SCA_Late_Night_House_Calls_desc:0 "As news of our nation reaches the Commonwealth, we had expected some defectors. While this certainly has happened, what we did not expect was who some of the these people were. While many are farmers and workers, we've also received word that some generals secretly hold sympathies for our cause and wish to join us. Our nation is in desperate need to experienced military command personnel. We must do everything in our people to facilitate their escape."
 
   SCA_The_Red_Patriot:0 "The Red Patriot"
-  SCA_The_Red_Patriot_desc:0 ""
+  SCA_The_Red_Patriot_desc:0 "In all the American continent, there have not been a people treated with such indignity as the Indians have. Suffering the full force of imperialism for generations, it has been our duty as revolutionaries to uplift our red comrades wherever we go.\n\nIn the United Commonwealth the most influential of these remaining tribes is the Seminole, a tribe long loyal to Britain in the hopes of their cultural survival. To gain these men on our side we must begin reaching out to their disaffected young, propagating heroic myths of native rebels and encouraging solidarity with our revolutionary cause.\n\nThen when the time is right, we will wipe the stain of imperialism away together. Hand in hand, driving the British into the sea!"
 
   SCA_Burn_Their_Fields:0 "Burn Their Fields"
-  SCA_Burn_Their_Fields_desc:0 ""
+  SCA_Burn_Their_Fields_desc:0 "A populace that is well fed is not one that rebels, and as long as the workers of the United Commonwealth feel they can put bread on the table every night we cannot rely on them to join our war of liberation. It is necessary then, to provoke them into joining our cause.\n\nAmong the farmers there are many discontent with the corporate machine’s destruction of their livelihoods. These men will be the catalyst for our revolution, burning their fields in protest and starving the cities of their produce. Only then will the urban proletariat begin to join the revolution too."
 
   SCA_The_Mississippi_Incident:0 "The Mississippi Incident"
-  SCA_The_Mississippi_Incident_desc:0 ""
+  SCA_The_Mississippi_Incident_desc:0 "Our history books pay much service to Washington and the Virginia Rebellion he championed, but say little of the revolution that came after him: the Southern Rebellion of 1833. We have little in common with the southerners who revere it to this day, but by linking our revolutionary movement to the continuity of these rebellions, we will be able to infiltrate the south’s more anti-British populace.\n\nAcross the Mississippi we will begin smuggling operations and skirmishes with our men disguised as New Dixie militiamen. If we are able to provoke a fight between them and the UC, the southern workers will surely begin to rebel too. Afterwards, we will be able to embrace these wayward rebels as true members of our revolution."
 
   # Second Continental Army - Post-Unification
 
