Butler called. He wants his country back.

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -906,6 +906,11 @@
   PBNews.229.d:0 "Tragedy struck today as Acadiana Minister Huey Long fell to his death while touring the Melbourne Agroplex. The Southern American populist had been growing in popularity for the last few years, arguing for an aggressive wealth redistribution plan to tackle Acadiana's high unemployment and poverty.\n\nVisiting the Greater Melbourne Agroplex, Long was seeking solutions to the nation's population concentrations, but instead found tragedy when he lost his footing. According to witnesses, Long tumbled for over two minutes down a flight of stairs before being rushed to emergency care, dying the next morning."
   PBNews.229.a:0 "Truly one of the minds of a generation"
 
+  PBNews.230.t:0 "SECOND AMERICAN REVOLUTION"
+  PBNews.230.d:0 "The Second Continental Army has revealed itself to the world and more importantly to the United Commonwealth. Butler announced is a short speech soon after that the SCA was to embark on a great campaign that would see the ultimate destruction of capitalism from the North American continent. An official declaration of war would quickly follow Butler's speech, with both the Second Continental Army and the British Empire now in a state of war, dubbed the Second American Revolution by Butler and his followers. The question now is who exactly will win the revolution, and whether such an event would see Britain expelled from North American once and for all. "
+  PBNews.230.a:0 "Death before dishonour."
+
+
 
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
