--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -641,7 +641,7 @@
   SCA_The_Equal_Opportunities_Act_desc:0 " Until recently, in most of the world, education was a rare and expensive luxury that few could afford. But even in this day and age, much of our population remains uneducated beyond the bare minimum. Uneducation breeds ignorance, which leads to prejudice and all the other problems that have plagued us in the past. But education is an effective solution to these woes, and we intend to use it. This Act will create a strong population, smarter than anywhere else. With this vast access to information, we can combat misinformation easily. And create opportunities for success, giving everyone a fair chance to make something of themselves."
 
   SCA_The_Great_Leap_Forward:0 "The Great Leap Forward"
-  SCA_The_Great_Leap_Forward_desc:0 ""
+  SCA_The_Great_Leap_Forward_desc:0 " In the past, we have achieved great things despite our disadvantages. Our people are happier and healthier and our industry is quite powerful despite how young our nation is. But while these have all been steps towards a brighter future, is it time we sped up. Not with another step, but a leap into the future! We will rapidly expand our industry and cities, expand infrastructure to facilities further expansion. And before long, we will rival even the largest cities of the Commonwealth!"
 
   SCA_Migrate_The_Farmers:0 "Migrate The Farmers"
   SCA_Migrate_The_Farmers_desc:0 ""
@@ -653,7 +653,7 @@
   SCA_Factories_Of_The_New_World_desc:0 ""
 
   SCA_The_Policy_Of_Self_Reliance:0 "The Policy Of Self Reliance"
-  SCA_The_Policy_Of_Self_Reliance_desc:0 ""
+  SCA_The_Policy_Of_Self_Reliance_desc:0 "Our territories do not have the large industry or far-reaching trade networks of the United Commonwealth; many still live as they have for generations on family farms and never step foot from the town they are born. Although this leaves us at a massive disadvantage compared to the east, it does give us a unique opportunity to build a completely self-sufficient economy.\n\nPeople will be encouraged to continue homesteading and growing their gardens, and in wider society this culture of rugged self-reliance will become our national mythos. Anything we can make locally we will, be it produce, clothes or munitions."
 
   SCA_Made_In_The_SCA:0 "Made In The SCA"
   SCA_Made_In_The_SCA_desc:0 ""
@@ -707,7 +707,7 @@
   SCA_Emphasize_The_American_Struggle_desc:0 ""
 
   SCA_Revolution_No_Matter_The_Cost:0 "Revolution No Matter The Cost"
-  SCA_Revolution_No_Matter_The_Cost_desc:0 ""
+  SCA_Revolution_No_Matter_The_Cost_desc:0 "Our men survived only by the skin of their teeth during the Great March West, many more not making it at all. Those who did survive learned quickly that one cannot be beholden to petty “morality” or “decency” if such values leave them to starve. They learned that to eat you must steal, and that to survive you must be ruthless to your enemies.\n\nEven though we are no longer in desperate times we should not discard these lessons. Any tactic or weapon we can use to defeat our enemies we will use, regardless of the moral qualms.\n\nThe ends justify the means, after all."
 
   SCA_Honourable_Liberators:0 "Honourable Liberators"
   SCA_Honourable_Liberators_desc:0 "It was once said that all is 'fair in love and war', but as the day of the Liberation of the East draws closer, we must prove this quote wrong. This conflict will be our largest military operation and will be the first impression we give to much of the world. While we must win, we will not resort to the kind of cruel and dishonourable tactics employed by much of the world. Though this, we will put our best foot forward. Proving that the Revolution is not a bloody purge but a noble crusade of liberation!"
@@ -759,17 +759,14 @@
   SCA_Ministry_Of_The_Interior:0 "Ministry Of The Interior"
   SCA_Ministry_Of_The_Interior_desc:0 ""
 
-  SCA_Covert_Actions_America:0 "Covert Actions: South America"
-  SCA_Covert_Actions_America_desc:0 ""
+  SCA_Covert_Actions_Mexico:0 "Covert Actions: Mexico"
+  SCA_Covert_Actions_Mexico_desc:0 ""
 
-  SCA_Covert_Actions_Africa:0 "Covert Actions: Africa"
-  SCA_Covert_Actions_Africa_desc:0 ""
+  SCA_Covert_Actions_Columbia:0 "Covert Actions: Columbia"
+  SCA_Covert_Actions_Columbia_desc:0 ""
 
-  SCA_Infiltrate_The_Big_Three:0 "Infiltrate The Big Three"
-  SCA_Infiltrate_The_Big_Three_desc:0 ""
-
-  SCA_Unload_The_Pamphlets:0 "Unload The Pamphlets"
-  SCA_Unload_The_Pamphlets_desc:0 ""
+  SCA_Covert_Actions_Central_America:0 "Covert Actions: Central America"
+  SCA_Covert_Actions_Central_America_desc:0 ""
 
   SCA_Council_For_Mutual_Economic_Assistance:0 "Council For Mutual Economic Assistance"
   SCA_Council_For_Mutual_Economic_Assistance_desc:0 ""
@@ -777,8 +774,8 @@
   SCA_The_Tonkaliwako_Accord:0 "The Tonkaliwako Accord"
   SCA_The_Tonkaliwako_Accord_desc:0 ""
 
-  SCA_The_Texan_Question:0 "The Texan Question"
-  SCA_The_Texan_Question_desc:0 ""
+  SCA_Approach_Copenhagen:0 "The Greenland Purchase"
+  SCA_Approach_Copenhagen_desc:0 ""
 
   SCA_Red_Liberty_Calling:0 "Red Liberty Calling"
   SCA_Red_Liberty_Calling_desc:0 ""
@@ -1027,6 +1024,10 @@
   SCA_Total_War_Lol_tt:0 "§RYou will need to defeat Quebec, the Hudson Bay, and the United Commonwealth to force a peace deal.§!"
   SCA_Total_War_Lol_2_tt:0 "§HYou only need to defeat the United Commonwealth to force a peace deal.§!"
 
+  SCA_President_Portrait_1:0 "Earl Browder:\n--------------------------------\n\n\n\n\n\n\n£GFX_SCA_Earl_Browder\n\n\n\n\n\n\n\n--------------------------------"
+  SCA_President_Portrait_2:0 "Gus Hall:\n--------------------------------\n\n\n\n\n\n\n£GFX_SCA_Gus_Hall\n\n\n\n\n\n\n\n--------------------------------"
+  SCA_President_Portrait_3:0 "William Foster:\n--------------------------------\n\n\n\n\n\n\n£GFX_SCA_William_Foster\n\n\n\n\n\n\n\n--------------------------------"
+
   ##########################
   # TECH
   ##########################
@@ -1156,6 +1157,12 @@
   SCA24opta:0 "Consolidate it under one puppet regime."
   SCA24optb:0 "Keep the nations divided and under our supervision."
   SCA24optc:0 "The North will remain under direct Continetal control."
+
+  SCA25title:0 "The First Presidental Election"
+  SCA25desc:0 "" 
+  SCA25opta:0 "Earl Browder"
+  SCA25optb:0 "Gus Hall"
+  SCA25optc:0 "William Foster"
 
   ##########################
   # PUPPETS/AUTONOMIES
