--- a/localisation/english/PB_bookmarks_l_english.yml
+++ b/localisation/english/PB_bookmarks_l_english.yml
@@ -26,7 +26,7 @@
 
  #America
  AME_PAX_BRITANNICA_DESC:0 "Write something here Grestin"
- SCA_PAX_BRITANNICA_DESC:0 "VERY IMPORTANT: The Second Continental Army isn't playable at game start. To play them do the following, *insert guide*.\n\nBuilt off the back of retired veterans from the Great War under the leadership of Butler, the SCA is a nation ready to do what is needed to ensure a fair and equal America. Every man women, not matter their creed or race must ensure the liberation of all American workers. Although our great struggle will test the limits of our dedication towards liberation we must stay strong, for no one can understand the plight of the American people beyond ourselves. "
+ SCA_PAX_BRITANNICA_DESC:0 "VERY IMPORTANT: The Second Continental Army isn't playable at game start. To play them do the following, *Complete the United Commonwealth Focus: Escalation Dominance*.\n\nBuilt off the back of retired veterans from the Great War under the leadership of Butler, the SCA is a nation ready to do what is needed to ensure a fair and equal America. Every man and women must ensure the liberation of all American workers. Although our great struggle will test the limits of our dedication towards liberation we must stay strong, for no one can understand the plight of the American people beyond ourselves. "
  MEX_PAX_BRITANNICA_DESC:0 "Coming In A Future Update"
 
  RUS_PAX_BRITANNICA_DESC:0 "Coming In The Next Update" 
