--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -968,8 +968,8 @@
   SCA_Red_America_DEF:0 "Continental Interim Government"
   SCA_Red_America_ADJ:0 "American"
 
-  SCA_North_American_Union:0 "North American Union"
-  SCA_North_American_Union_DEF:0 "North American Union"
+  SCA_North_American_Union:0 "Greater North American Union"
+  SCA_North_American_Union_DEF:0 "the Greater North American Union"
   SCA_North_American_Union_ADJ:0 "American"
 
   SCA_Establish_The_Interim_Government_tt:0 "Allows for the coring of American £GFX_territory_icon states"
@@ -1164,6 +1164,22 @@
   SCA25optb:0 "Gus Hall"
   SCA25optc:0 "William Foster"
 
+  SCA26title:0 "The Confederacy Occupation Question"
+  SCA26desc:0 "" 
+  SCA26opta:0 "We own these lands now."
+  SCA26optb:0 "Grant the northern states to our Borealian subject, occupy everything else."
+  SCA26optc:0 "Establish a revolutionary native republic."
+
+  SCA27title:0 "The Cuban Occupation Question"
+  SCA27desc:0 "" 
+  SCA27opta:0 "We own these lands now."
+  SCA27optb:0 "Establish a loyal revolutionary regime."
+
+  SCA28title:0 "The Hispaniola Occupation Question"
+  SCA28desc:0 "" 
+  SCA28opta:0 "We own these lands now."
+  SCA28optb:0 "Establish a loyal revolutionary regime."
+
   ##########################
   # PUPPETS/AUTONOMIES
   ##########################
@@ -1181,6 +1197,19 @@
   BCL_SCA_Puppet:0 "Canadian People's United Republic"
   BCL_SCA_Puppet_DEF:0 "the Canadian People's United Republic"
   BCL_SCA_Puppet_ADJ:0 "Canadian"
+
+  LAK_SCA_Puppet:0 "Confederate People's United Republic"
+  LAK_SCA_Puppet_DEF:0 "the Confederate People's United Republic"
+  LAK_SCA_Puppet_ADJ:0 "Confederate"
+
+  ATC_SCA_Puppet:0 "Cuban People's United Republic"
+  ATC_SCA_Puppet_DEF:0 "the Cuban People's United Republic"
+  ATC_SCA_Puppet_ADJ:0 "Cuban"
+
+  HAI_SCA_Puppet:0 "Haitian People's United Republic"
+  HAI_SCA_Puppet_DEF:0 "the Haitian People's United Republic"
+  HAI_SCA_Puppet_ADJ:0 "Haitian"
+
 
 
 
