--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -1180,6 +1180,11 @@
   SCA28opta:0 "We own these lands now."
   SCA28optb:0 "Establish a loyal revolutionary regime."
 
+  SCA29title:0 "The Texan Occupation Question"
+  SCA29desc:0 "" 
+  SCA29opta:0 "We own these lands now."
+  SCA29optb:0 "Establish a loyal revolutionary regime."
+
   ##########################
   # PUPPETS/AUTONOMIES
   ##########################
@@ -1209,6 +1214,10 @@
   HAI_SCA_Puppet:0 "Haitian People's United Republic"
   HAI_SCA_Puppet_DEF:0 "the Haitian People's United Republic"
   HAI_SCA_Puppet_ADJ:0 "Haitian"
+
+  TEX_SCA_Puppet:0 "Texan People's United Republic"
+  TEX_SCA_Puppet_DEF:0 "the Texan People's United Republic"
+  TEX_SCA_Puppet_ADJ:0 "Texan"
 
 
 
