--- a/localisation/english/PB_Super_Events_l_english.yml
+++ b/localisation/english/PB_Super_Events_l_english.yml
@@ -104,3 +104,7 @@
   SPEVNT_Britain_Wins_Orbit_War:0 "BRITAIN WINS THE ORBIT WARS"
   SPEVNT_Britain_Wins_Orbit_War_TEXT:0 "There is, though I do not know how there is or why there is, a sense of infinite peace and protection in the glittering hosts of heaven.\n\n§O-H. G. Wells-§!"
   SPEVNT_Britain_Wins_Orbit_War_CLOSETEXT:0 "§OBRITANNIA CLAIMS THE HEAVENS§!"
+
+  SPEVNT_Britain_Wins_Last_Indian_War:0 "THE LAST INDIAN WAR"
+  SPEVNT_Britain_Wins_Last_Indian_War_TEXT:0 "When it comes time to die, be not like those whose hearts are filled with the fear of death, so when their time comes they weep and pray for a little more time to live their lives over again in a different way. Sing your death song, and die like a hero going home.\n\n§O-Chief Aupumut-§!"
+  SPEVNT_Britain_Wins_Last_Indian_War_CLOSETEXT:0 "§OTODAY IS A GOOD DAY TO DIE§!
